@@ -1,2 +1,0 @@
-class <%= class_name %> < Authlogic::Session::Base
-end
