@@ -8,6 +8,7 @@
   * SimpleForm generators removed. SimpleForm (https://github.com/plataformatec/simple_form) has its own generators.
 	* Erubis generator removed.
   * Formtastic generators removed. Formtastic (https://github.com/justinfrench/formtastic) has its own generators.
+  * Authlogic generators removed. Authlogic (https://github.com/binarylogic/authlogic) has its own generators.
 
 == 0.17.5
 * optimize
